--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second-website</title>
+    <script src="https://kit.fontawesome.com/04dd8a9c7e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,5 +22,17 @@
             <li><a href="">About Us</a></li>
         </ul>
     </nav>
+
+    <header>
+        <div class="search-box-icon-parent">
+            <input type="search" placeholder="search">
+            
+           <div class="icon-div">
+            <i class="fas fa-search"></i>
+          </div>
+            
+        </div>
+    </header>
+
 </body>
 </html>
